Wed May  2 16:31:21 BST 2001  Colin Watson  <cjwatson@debian.org>

	* config.guess, config.sub: New files, synced from today's CVS.

Wed May  2 16:28:02 BST 2001  Colin Watson  <cjwatson@debian.org>

	* configure.in, include/Defines.in, man/Makefile.in: Remove use of
	  curdate.

	* man/it_IT.88591/man1/man.man1, man/ja_JP.eucJP/man1/man.man1,
	  man/man1/man.man1: s/curdate/date/g.

Wed May  2 16:15:00 BST 2001  Colin Watson  <cjwatson@debian.org>

	* po/POTFILES.in: Added src/accessdb.c and src/wrapper.c.

Wed May  2 15:53:45 BST 2001  Colin Watson  <cjwatson@debian.org>

	* ABOUT-NLS, aclocal.m4, intl/*, po/ChangeLog, po/Makefile.in.in:
	  Update to gettext 0.10.37 (from 0.10.32). Various additions and
	  removals.

	* GNUmakefile.in, libdb/Makefile.in, src/Makefile.in: Remove old
	  gencat/xcat targets.

Wed May  2 01:33:04 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): Initialize security properly, since we may be
	  setuid, and drop privileges when creating temporary databases in
	  user-supplied hierarchies. Thanks to Ethan Benson for reporting
	  this vulnerability.

	* man-db.gnu, man-db.lsm: Add myself as a developer; change
	  maintainer.

	* libdb/db_lookup.c, src/man.c: Cosmetic fixes.
	* src/accessdb.c (usage): Remove spurious space in output.

Wed May  2 01:02:19 BST 2001  Colin Watson  <cjwatson@debian.org>

	* Merging in changes from Wilf's 2.3b12 beta release.
	* docs/ChangeLog: Folded in changelog comments.

	* GNUmakefile.in, configure.in: Build configuration file.
	* */Makefile.in: Rearrange code for CPPFLAGS and similar.

	* configure.in: Look for grep, seteuid(), setresuid().
	* include/config.h.in: Add HAVE_SETEUID and HAVE_SETRESUID.
	* include/manconfig.h.in: Add GREP and various grep flags.
	* src/whatis.c: Use GREP rather than "grep".

	* src/man_db.config: Renamed to src/man_db.conf.in.
	* src/man_db.conf.in: Add commented out DEFINE directives.
	* docs/ToDo: Need to document DEFINE directive. (Also, I (cjwatson)