@@ -201,7 +201,7 @@ ifeq ($(srcdir),.)
 _subdirs = $(EVERYTHING) tools docs include manual
 
 _all = */README */Makefile.in
-_root = README configure *.h *.m4 *.in 
+_root = ABOUT-NLS README configure *.h *.m4 *.in 
 _docs = INSTALL.* COPYING ChangeLog NEWS ToDo
 _include = *.in 
 _lib = *.[ch]
